css/site.scss
/* ... */
@mixin page-content() {
  // for small displays as single column
  @include single-column-content();

  ul {
    @extend %default-ul;
    @include dotted-link-underline;

    a {
      color: #444;
    }
  }

  p {
    @include dotted-link-underline;

    a {
      color: #444;
    }
  }

  font-family: $page-content-font-family;
  font-weight: $page-content-font-weight;
  font-style: $page-content-font-style;
  font-size: $page-content-font-size;
  text-rendering: optimizeLegibility; // Fix the character spacing for headings

  .right-icon {
    a {
      color: inherit;
      font-size: $base-font-size * 0.75;
    }

    float: right;
  }

}

@mixin page-meta() {
  // for small displays as single column
  @include single-column-content();

  ul {
    @extend %default-ul;
  }

  p {
    a {
      color: #444;
      position: relative;
      text-decoration: none;
      border-bottom: dotted 1px #E64C3C;
    }

    //    a:after{
    //      position: absolute;
    //      left: 0;
    //      bottom: 0;
    //      content: '';
    //      width: 100%;
    //      border-bottom-width: 1px;
    //      border-bottom-style: dotted;
    //      display: inline;
    //    }
  }

  font-family: $page-content-font-family;
  font-weight: $page-content-font-weight;
  font-style: $page-content-font-style;
  font-size: $page-content-font-size;
  text-rendering: optimizeLegibility; // Fix the character spacing for headings
}


.project-content {
  @include page-content();
  @include span-columns(12);
  @include omega();
}

.project-content-main {
  @include page-content();
  @include span-columns(8);
}

.project-content-aside {
  @include page-content();
  @include span-columns(4);
  @include omega();
}

.project-meta {
  @include page-meta();
  @include span-columns(9);
  @include omega();
}

.person-content {
  @include page-content();
}

.person-meta {
  @include page-meta();
}

.funding-content {
  @include page-content();
  @include span-columns(12);
  @include omega();
}

.funding-meta {
  @include page-meta();
}

.acknowledgements-content {
  @include page-content();
}

.acknowledgements-meta {
  @include page-meta();
}

.home-content-main {
  @include page-content();
  @include span-columns(8);
}

.home-content-aside {
  @include page-content();
  @include span-columns(4);
  @include omega();
}

.home-meta {
  @include page-meta();
  @include span-columns(12);
}

.post-content {
  @include page-content();
}

.post-content-main {
  @include page-content();
  @include span-columns(8);
}

.post-content-aside {
  @include page-content();
  @include span-columns(0);
  @include omega();
}

.post-meta {
  @include page-meta();
}

.blog-page {
  @include page-content();
  @include span-columns(12);
  @include omega();
}


.blog-teaser {


  float: left;
  //background-color: lightgrey;

  @include media($large-display) {
    height: 550px;
    @include span-columns(5.7);

  }
  @include media($medium-display) {
    @include span-columns(12);
  }
  @include media(small-display) {
    @include span-columns(12);
  }
  margin-bottom: 10px;
 
}

.blog-teaser:nth-child(even)
{
  @include media($large-display) {
    float:right;
  }
}

a.project-website {
  @include reverse-dotted-link-underline;
  font-family: $condensed-font-family;
  font-size: 1em;
  font-weight: 700;
  color: $dark-blue;
}

.all-news-link {
  @include dotted-link-underline;

  a {
    font-family: $condensed-font-family;
    font-size: 1em;
    font-weight: 700;
    color: $dark-blue;
  }
}



  a.post-list-link {
    font-style: italic;
    font-size: 0.9em;
    color: #444;
    position: relative;
    text-decoration: none;
  }

  //  a.post-list-link:after{
  //    position: absolute;
  //    left: 0px;
  //    bottom: 0;
  //    content: '';
  //    width: 100%;
  //    border-bottom-width: 1px;
  //    //border-bottom-style: solid;
  //  }

  .post-list-item {
    margin-bottom: 10px;

    p {
      margin-bottom: 10px;
      //display: inline;
    }

   

    b {
      color: #3376A0;
    }
    
  }

  // nested fonts in the blog posts should be
  .post-list-item h2 {
    font-size: $base-font-size;
  }

  .post-list-item h3 {
    font-size: $base-font-size;
  }

  .post-list-item h4 {
    font-size: $base-font-size;
  }

  .post-list-title {
    color: $dark-blue;// #F1F2F2;
    //color: lighten(#F1F2F2,0.5);
    //background: lighten($home-color, 30%);
    
    //border-color: $home-color;
    //font-family: $sans-serif-font-family;
    font-family: $condensed-font-family;
    font-weight: 700;
    font-style: normal;
    display: block;
    font-size: 1.2em;
    padding: 5px;
    padding-left: 0px;
    margin-bottom: 15px;
 


  
    .right-text {
      font-size: 1em; 
      font-weight: 400;
      white-space:nowrap;
      padding-left: 10px;
    }

    a {
      display: flex;
      justify-content: space-between;
      font-style: normal;
      //display: block;
      //height: 28px;
      padding: 3px 0px;
      color: $dark-blue;
  
      border-bottom: 2px $home-color solid;
      //height: 30px;
      //background-color: #444;
  
      transition-property: background-color, color;
      transition-duration: 500ms;
      transition-timing-function: ease;
      transition-delay: 25ms;
  
      &:focus, &:hover, &:active, &.active {
        //height: 30px;
        border-bottom: 5px $home-color solid;
      }
    }
  
  }

  /*.post-list-excerpt {
      height:160px;
      overflow:hidden;
  }*/



// author and date for a blog post
.post-meta {
  font-size: 14px;
  font-style: italic;
  color: #636363;
}

.publication-content {
  @include page-content();
  @include span-columns(12);
  @include omega();
}

.publication-content-main {
  @include page-content();
  @include span-columns(8);
}
/* ... */

